# algokit-typescript-template

./: CONTRIBUTING.md  README.md  package-lock.json  pyproject.toml
.github/workflows/: check-python.yaml
examples/production/: .algokit.toml  .pre-commit-config.yaml  README.md  eslint.config.mjs  package.json  tsconfig.json
examples/production/.github/workflows/: production-cd.yaml  production-ci.yaml
examples/production/smart_contracts/hello_world/: contract.e2e.spec.ts
examples/starter/: .algokit.toml  .gitignore  README.md  package.json
examples/starter/smart_contracts/hello_world/: contract.algo.ts
examples/starter_typescript_desired/: .algokit.toml  package.json
examples/starter_typescript_desired/.algokit/static-analysis/snapshots/: HelloWorld.approval.json
examples/starter_typescript_desired/debug-traces/: 20250113_111427_lr3650_1appl.trace.avm.json
examples/starter_typescript_desired/smart_contracts/: index.ts
examples/starter_typescript_desired/smart_contracts/hello_world/: contract.e2e.spec.ts
template_content/: .gitignore  README.md.jinja  package.json.jinja  {% if use_linter %}eslint.config.mjs{% endif %}  {% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
template_content/.algokit/generators/create_contract/: copier.yaml
template_content/smart_contracts/{{ contract_name }}/: contract.algo.ts.jinja  {% if use_vitest %}contract.e2e.spec.ts{% endif %}.jinja
template_content/{% if ide_vscode %}.vscode{% endif %}/: settings.json.jinja
template_content/{% if use_github_actions %}.github{% endif %}/workflows/: {% include pathjoin('includes', 'project_name_kebab.jinja') %}-cd.yaml.jinja  {% include pathjoin('includes', 'project_name_kebab.jinja') %}-ci.yaml.jinja
tests/: test_templates.py
(+1 files in other folders)
